# virtualc64

./: .gitignore  .swiftlint.yml  .travis.yml  DocIcon.icns  IconCRT.icns  Info.plist  LICENSE  README.md  ResetImage.VC64  V64_Prefix.pch  VirtualC64Appcast.xml  about.html  config.h  dsa_pub.pem  impressum.html  index.html  rnotesNew.html  showcases.html  vc64web_player.js
Core/: CMakeLists.txt  Headless.cpp  Headless.h  VirtualC64.cpp  VirtualC64.h  VirtualC64Config.cpp  VirtualC64Headless.cpp  VirtualC64Types.h  config.cpp  config.h  debug.cpp  debug.h
Core/Components/: C64.cpp  C64.h  C64Base.cpp  C64Types.h  CMakeLists.txt
Core/FileSystems/: CMakeLists.txt  FSBlock.cpp  FSBlock.h  FSDescriptors.cpp  FSDescriptors.h  FSDirEntry.cpp  FSDirEntry.h  FSTypes.h  FileSystem.cpp  FileSystem.h  OldFileSystem.cpp  OldFileSystem.h
Core/Infrastructure/: BasicTypes.h  CMakeLists.txt  CmdQueue.cpp  CmdQueue.h  CmdQueueTypes.h  Colors.cpp  Configurable.cpp  Configurable.h  Constants.h  CoreComponent.cpp  CoreComponent.h  CoreComponentTypes.h  CoreError.cpp  CoreError.h  CoreObject.cpp  CoreObject.h  Defaults.cpp  Defaults.h  Dumpable.cpp  Dumpable.h  DumpableTypes.h  Emulator.cpp  Emulator.h  EmulatorBase.cpp  EmulatorTypes.h  Error.cpp  Error.h  ErrorTypes.h  Host.cpp  Host.h  HostTypes.h  Inspectable.cpp  Inspectable.h  MsgQueue.cpp  MsgQueue.h  MsgQueueTypes.h  Option.cpp  Option.h  OptionTypes.h  Reflection.h  (+10 more)
Core/Media/: AnyCollection.cpp  AnyCollection.h  AnyFile.cpp  AnyFile.h  CMakeLists.txt  CRTFile.cpp  CRTFile.h  D64File.cpp  D64File.h  Folder.cpp  Folder.h  G64File.cpp  G64File.h  MediaError.cpp  MediaError.h  MediaFile.cpp  MediaFile.h  MediaFileTypes.h  P00File.cpp  P00File.h  PETName.h  PRGFile.cpp  PRGFile.h  RomDatabase.h  RomFile.cpp  RomFile.h  Script.cpp  Script.h  Snapshot.cpp  Snapshot.h  T64File.cpp  T64File.h  TAPFile.cpp  TAPFile.h  Workspace.cpp  Workspace.h
Core/Misc/: CMakeLists.txt
Core/Peripherals/: CMakeLists.txt
Core/Ports/: AudioPort.cpp  AudioPort.h  AudioPortBase.cpp  AudioPortTypes.h  CMakeLists.txt  ControlPort.cpp  ControlPort.h  ControlPortBase.cpp  ControlPortTypes.h  ExpansionPort.cpp  ExpansionPort.h  ExpansionPortBase.cpp  ExpansionPortTypes.h  PowerPort.cpp  PowerPort.h  PowerPortBase.cpp  PowerPortTypes.h  SampleRateDetector.cpp  SampleRateDetector.h  SerialPort.cpp  SerialPort.h  SerialPortBase.cpp  SerialPortTypes.h  UserPort.cpp  UserPort.h  UserPortBase.cpp  VideoPort.cpp  VideoPort.h  VideoPortBase.cpp  VideoPortTypes.h
Core/RetroVault/: CBMFileSystem.h  CMakeLists.txt  Devices.h  Images.h  config.h
Core/Utilities/: Animated.h  Annotations.h  BasicTypes.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Checksum.cpp  Checksum.h  Chrono.cpp  Chrono.h  Compression.cpp  Compression.h  Concurrency.cpp  Concurrency.h  Exception.h  IOUtils.cpp  IOUtils.h  Macros.h  MemUtils.cpp  MemUtils.h  Parser.cpp  Parser.h  RingBuffer.h  StringUtils.cpp  StringUtils.h
Emulator/: API.cpp  API.h  C64.cpp  C64.h  C64Config.h  C64Private.h  C64PrivateTypes.h  C64Public.h  C64PublicTypes.h  C64Types.h  CMakeLists.txt  Emulator.cpp  Emulator.h  EmulatorTypes.h  Headless.cpp  Headless.h  Headless.hpp  HeadlessScripts.h  Makefile  SelfTestScript.h  VirtualC64.cpp  VirtualC64.h  VirtualC64.hpp  VirtualC64Config.cpp  VirtualC64Config.h  VirtualC64Diagnose.cpp  VirtualC64Diagnose.h  VirtualC64Headless.cpp  VirtualC64Headless.h  VirtualC64Types.h  VirtualC64Types.hpp  config.cpp  config.h  config.hpp
Emulator/Base/: Aliases.h  Buffers.h  C64Component.cpp  C64Component.h  C64ComponentTypes.h  C64Object.cpp  C64Object.h  CMakeLists.txt  CmdQueue.cpp  CmdQueue.h  CmdQueue.hpp  CmdQueueTypes.h  CmdQueueTypes.hpp  Colors.cpp  Colors.h  Configurable.cpp  Configurable.h  Configurable.hpp  Constants.cpp  Constants.h  CoreComponent.cpp  CoreComponent.h  CoreComponent.hpp  CoreComponentTypes.h  CoreObject.cpp  CoreObject.h  CoreObject.hpp  Defaults.cpp  Defaults.h  Defaults.hpp  Dumpable.h  Error.cpp  Error.h  ErrorTypes.h  ErrorTypes.hpp  Errors.h  HardwareComponent.cpp  HardwareComponent.h  HardwareComponentTypes.h  Host.cpp  (+40 more)
Emulator/CIA/: CIA.cpp  CIA.h  CIAPrivate.h  CIAPublic.h  CIAPublicTypes.h  CIARegisters.cpp  CIARegs.cpp  CIATypes.h  CMakeLists.txt  TOD.cpp  TOD.h  TODTypes.h  TOD_types.h
Emulator/CPU/: C64CPU.cpp  C64CPU.h  CMakeLists.txt  CPU.cpp  CPU.h  CPUDebugger.cpp  CPUDebugger.h  CPUInstructions.cpp  CPUInstructions.h  CPUPrivate.h  CPUPrivateTypes.h  CPUPublic.h  CPUPublicTypes.h  CPUTypes.h  DriveCPU.cpp  DriveCPU.h  ProcessorPort.cpp  ProcessorPort.h
Emulator/Cartridges/: CMakeLists.txt  Cartridge.cpp  Cartridge.h  Cartridge.hpp  CartridgeBase.cpp  CartridgePrivate.h  CartridgePublic.h  CartridgePublicTypes.h  CartridgeRom.cpp  CartridgeRom.h  CartridgeRom.hpp  CartridgeTypes.h  CartridgeTypes.hpp  Cartridge_types.h  FlashRom.cpp  FlashRom.h  FlashRom.hpp  Makefile
Emulator/Components/: C64.cpp  C64.h  C64.hpp  C64Base.cpp  C64Types.h  C64Types.hpp  CMakeLists.txt  Emulator.cpp  Emulator.h  Emulator.hpp  EmulatorBase.cpp  EmulatorConfig.cpp  EmulatorInfo.cpp  EmulatorTypes.h  EmulatorTypes.hpp
Emulator/Computer/: ControlPort.cpp  ControlPort.h  ControlPort_types.h  ExpansionPort.cpp  ExpansionPort.h  ExpansionPort_types.h  IEC.cpp  IEC.h  Keyboard.cpp  Keyboard.h  ProcessorPort.cpp  ProcessorPort.h
Emulator/Datasette/: Datasette.cpp  Datasette.h
Emulator/Drive/: Disk.cpp  Disk.h  DiskPrivate.h  DiskPrivateTypes.h  DiskPublic.h  DiskPublicTypes.h  DiskTypes.h  Drive.cpp  Drive.h  DriveMemory.cpp  DriveMemory.h  DrivePrivate.h  DrivePublic.h  DrivePublicTypes.h  DriveTypes.h  IEC.cpp  IEC.h  VC1541.cpp  VC1541.h  VIA.cpp  VIA.h
Emulator/FileFormats/: AnyArchive.cpp  AnyArchive.h  AnyC64File.cpp  AnyC64File.h  AnyDisk.cpp  AnyDisk.h  CRTFile.cpp  CRTFile.h  D64File.cpp  D64File.h  FileTypes.h  File_types.h  G64File.cpp  G64File.h  P00File.cpp  P00File.h  PRGFile.cpp  PRGFile.h  ROMFile.cpp  ROMFile.h  (+6 more)
VCCore/: CMakeLists.txt  Headless.cpp  VirtualC64.cpp  VirtualC64.h  VirtualC64Types.h  config.h  vcconfig.h  vcdebug.cpp  vcdebug.h
(+10104 files in other folders)
